# lightsout

./: Cargo.toml  README.md  THANKYOUS.md  Trunk.toml  illumination-no-no-1fc0d704235a0a13.js  illumination-no-no-440498679e57345c.js  index.html  todo.md
.github/workflows/: build-wasm-version.yaml  build-wasm-version.yml
assets/audio/: carefree.license.txt
src/: audio.rs  breakout.rs  lib.rs  lightsout.rs  loading.rs  main.rs  mainmenu.rs  mainmenuplugin.rs  utils.rs  victory.rs  victoryscreenplugin.rs
src/audio/: mod.rs  process_events.rs
src/game/: actions.rs  mod.rs  puzzle_word_encoder.rs  tile_puzzle.rs
src/gameplugin/: mod.rs  tile_checker.rs  tile_solver.rs
src/gameui/: colors.rs  mod.rs  styles.rs
src/old_game/: mod.rs  tile_checker.rs  tile_solver.rs
